# XASM-SHARP_PC-E500S

./: CMakeLists.txt  LICENSE  README.md
docs/: INFORMATION.txt  PC-E500 Instruction Table.txt
docs/Extra/: Codes BASIC PC-E500S.xls.xlsx  PC-E500 Instruction Table.txt
examples/: SAMPLE1.ASM  SAMPLE2.ASM  SAMPLE3.ASM  SAMPLE4.ASM
src/xasm/: EVAL.C  GENOP.C  HASH.C  INIT.C  MES.C  MISC.C  MVOPR.C  OPR.C  VAR.C  XASM.C  XASM.H
